# 5FX-Pedalboard

./: CMakeLists.txt
pedalboard_sketch/: array.hpp  datastore.cpp  datastore.hpp  harddefs.hpp  io.hpp  pedalboard_sketch.ino
src/: arduino-serial-lib.cpp  arduino-serial-lib.h  bridge.cpp  datastore.hpp  parser.hpp  protocol.hpp  protocol.ipp  protocols.hpp  serial-io.cpp  serial-io.hpp
